public/stylesheets/style.css
body {
  padding: 50px;
  background: url("../images/asanoha-400px.png");
  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
}
h1 {
  text-align: center;
}
h2 {
  text-align: center;
}
a {
  color: #00B7FF;
}
.catch-div {
  text-align: center;
}
/* centered columns styles */
.row-centered {
  text-align:center;
}
.col-centered {
  display:inline-block;
  float:none;
  /* reset the text-align */
  text-align:left;
  /* inline-block space fix */
  margin-right:-4px;
}
.col-max {
  /* custom max width */
  max-width:500px;
  width: 50%;
  float: none;
}
.challengeBox{
  display:inline-table;
  border:1px solid black;
  width:100%;
  height:200px;
  margin:1%;
  float:left;
  padding:1%;
  word-wrap: break-word;
}
.challengeDisplay{
  display:inline-table;
  /* width:30%; */
  margin:1%;
  float:left;
  padding:1%;
}
span.writing:focus{
  outline:none;
}
.active{
  color:green;
}
.player1, .completed-player1{
  color: red;
}
.challenge{
  color: black;
}
.player2, .completed-player2{
  color: blue;
}
.hidden{
  display:none;
}

